--- a/SupportMapping/CMakeLists.txt
+++ b/SupportMapping/CMakeLists.txt
@@ -3,5 +3,5 @@ project(SupportMapping)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(SupportMapping main.cpp SupportMapping.h vec3.h Exception.h)
+add_executable(SupportMapping main.cpp SupportMapping.h vec3.h Exception.h Shapes.h)
 
